--- a/Contact Modeling.vcxproj
+++ b/Contact Modeling.vcxproj
@@ -148,6 +148,9 @@
     <ClCompile Include="glad.c" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\Libraries\glad\include\glad\glad.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
