--- a/src/Contact Modeling.vcxproj
+++ b/src/Contact Modeling.vcxproj
@@ -151,6 +151,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\Libraries\imgui-master\examples\imgui_impl_glfw.cpp" />
+    <ClCompile Include="..\Libraries\imgui-master\examples\imgui_impl_opengl3.cpp" />
+    <ClCompile Include="..\Libraries\imgui-master\imgui.cpp" />
+    <ClCompile Include="..\Libraries\imgui-master\imgui_draw.cpp" />
+    <ClCompile Include="..\Libraries\imgui-master\imgui_widgets.cpp" />
     <ClCompile Include="Circle.cpp" />
     <ClCompile Include="glad.c" />
     <ClCompile Include="Source.cpp" />
